[package]
name = "gloo"
version = "0.4.0-canary.0"
edition = "2021"
build = "build.rs"

[dependencies]
walkdir = "2"
libc = "0.2"
clap = "2.33"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
colored = "2.0"
pretty_env_logger = "0.5"
yaml-rust = "*"
semver = "1.0.18"

[build-dependencies]
cc = "1.0"
walkdir = "2"
which = "4.0"
