[workspace]
resolver = "2"
members = [
  "baml-cli",
  "baml-lib/*",
  "baml-core-ffi",
  "baml-fmt",
  "baml-runtime",
  "baml-schema-wasm",
  "language-client-codegen",
  "language_client_python",
  "language_client_ruby/ext/ruby_ffi",
]
default-members = [
  "baml-cli",
  "baml-lib/*",
  "baml-core-ffi",
  "baml-fmt",
  "baml-runtime",
  "baml-schema-wasm",
  "language-client-codegen",
  "language_client_python",
]

[workspace.dependencies]
anyhow = "1.0"
askama = "0.12.1"
dashmap = "5.5.3"
either = "1.8.1"
env_logger = "0.11.3"
futures = { version = "0.3.30", features = ["executor"] }
log = "0.4.20"
indexmap = { version = "2.1.0", features = ["serde"] }
indoc = "2.0.1"
regex = "1.10.4"
reqwest = { version = "0.11.22", features = ["json", "native-tls-vendored"] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }

baml-runtime = { path = "baml-runtime" }
internal-baml-codegen = { path = "language-client-codegen" }
internal-baml-core = { path = "baml-lib/baml-core" }
internal-baml-jinja = { path = "baml-lib/jinja" }

[workspace.package]
version = "0.20.0-canary.0"
authors = ["Boundary <contact@boundaryml.com>"]

description = "BAML Toolchain"
license-file = "LICENSE"

[workspace.metadata.workspaces]
allow_branch = "canary"

[profile.release]
lto = true
