[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baml-cli"
version = "0.1.0"
description = "The BAML CLI, distributed in Python"
authors = ["Boundary <contact@boundaryml.com>"]

[tool.mypy]
strict = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
baml_py = ">=0.1.0"

[[tool.poetry.packages]]
include = "baml_cli"
from = "."

[tool.poetry.group.dev.dependencies]
types-decorator = "^5.1.8.4"
types-mock = "^5.1.0.2"
mock = "^5.1.0"
types-colorama = "^0.4.15.12"
types-regex = "^2023.10.3.0"
ruff = "*"
mypy = "*"
maturin = "^1.5.1"
