[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baml"
version = "0.7.0.dev1"
description = ""
authors = [ "Gloo <contact@trygloo.com>",]

[[tool.poetry.packages]]
include = "baml_core"
from = "."

[[tool.poetry.packages]]
include = "baml_version"
from = "."

[[tool.poetry.packages]]
include = "baml_lib"
from = "."

[[tool.poetry.packages]]
include = "pytest_baml"
from = "."

[tool.mypy]
strict = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiohttp = "^3.8.5"
coloredlogs = "^15.0.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
# Version 1.0.0 has breaking changes
openai = ">=0.27.9,<1.0.0"
types-requests = "^2.31.0.2"
anthropic = ">=0.3.11"
python-dotenv = "^1.0.0"
json5 = "^0.9.14"
opentelemetry-sdk = "^1.20.0"
opentelemetry-api = "^1.20.0"
opentelemetry-instrumentation = "^0.41b0"
colorama = "^0.4.6"
tenacity = "^8.2.3"
regex = "^2023.10.3"
pydantic = "^2.1"
typeguard = "^4.1.5"
types-regex = "^2023.10.3.0"

[tool.mypy."coloredlogs.*"]
ignore_missing_imports = true

[tool.poetry.plugins.pytest11]
pytest-baml = "pytest_baml.conftest"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
types-decorator = "^5.1.8.4"
types-mock = "^5.1.0.2"
mock = "^5.1.0"
ruff = "^0.0.291"
black = "^23.9.1"
types-colorama = "^0.4.15.12"
types-regex = "^2023.10.3.0"

[tool.ruff]
ignore = ["E501"]