[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baml"
version = "0.15.0.dev0"
description = ""
authors = [ "Gloo <contact@trygloo.com>",]

[[tool.poetry.packages]]
include = "baml_core"
from = "."

[[tool.poetry.packages]]
include = "baml_version"
from = "."

[[tool.poetry.packages]]
include = "baml_lib"
from = "."

[[tool.poetry.packages]]
include = "pytest_baml"
from = "."

[tool.mypy]
strict = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiohttp = ">=3.8.3"
coloredlogs = ">=15.0.1"
pytest = ">=7.1.3,<8"
pytest-asyncio = "^0.21.1"
openai = ">=0.28.1"
types-requests = ">=2.28.11"
anthropic = ">=0.14.0"
python-dotenv = ">=0.21.0"
json5 = ">=0.9.10"
opentelemetry-sdk = ">=1.15.0"
opentelemetry-api = ">=1.15.0"
opentelemetry-instrumentation = ">=0.34b0"
colorama = ">=0.4.6"
tenacity = ">=8.1.0"
regex = ">=2022.10.31"
pydantic = ">=2,<3"
typeguard = ">=4.0.0"
types-regex = "^2023.10.3.0"
packaging = "^23.2"

[tool.mypy."coloredlogs.*"]
ignore_missing_imports = true

[tool.poetry.plugins.pytest11]
pytest-baml = "pytest_baml.conftest"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
types-decorator = "^5.1.8.4"
types-mock = "^5.1.0.2"
mock = "^5.1.0"
types-colorama = "^0.4.15.12"
types-regex = "^2023.10.3.0"
ruff = "^0.2.1"
