[package]
edition = "2021"
name = "baml"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
baml-lib = { path = "../baml-lib/baml"}
base64 = "0.13.0"
check-latest = "1.0.2"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
glob = "0.3.1"
include_dir = {version = "0.7.3", features = ["glob"] }
log = "0.4.20"
reqwest = "0.11.22"
semver = "1.0.20"
serde.workspace = true
serde_json.workspace = true
shellwords = "1.1.0"
tokio = {version = "1.35.1", features = ["full"] }

[dev-dependencies]
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
