[package]
edition = "2021"
name = "baml"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
anyhow.workspace = true
baml-lib = { path = "../baml-lib/baml" }
base64 = "0.13.0"
check-latest = "1.0.2"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
colored = "2.0.4"
console = "0.15.8"
dialoguer = "0.11.0"
env_logger.workspace = true
glob = "0.3.1"
include_dir = { version = "0.7.3", features = ["glob"] }
internal-baml-client-llm = { path = "../baml-lib/client-llm" }
log.workspace = true
reqwest.workspace = true
semver = "1.0.20"
serde.workspace = true
serde_json.workspace = true
shellwords = "1.1.0"
tokio.workspace = true
walkdir.workspace = true
regex = "1.10.3"
tempfile = "3.10.1"
uuid = { version = "1.7.0", features = ["v4"] }
json_comments = "0.2.2"
dunce = "1.0.4"

[dev-dependencies]
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
