[package]
edition = "2021"
name = "baml"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
anyhow.workspace = true
baml-runtime = { path = "../baml-runtime", features = [
  "internal",
  "no_wasm",
], default-features = false }
baml-lib = { path = "../baml-lib/baml" }
base64.workspace = true
check-latest = "1.0.2"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
colored = "2.0.4"
console = "0.15.8"
dialoguer = "0.11.0"
dunce = "1.0.4"
env_logger.workspace = true
glob = "0.3.1"
include_dir = { version = "0.7.3", features = ["glob"] }
indexmap.workspace = true
indicatif = { version = "0.17.8", features = ["tokio"] }
json_comments = "0.2.2"
log.workspace = true
regex = "1.10.3"
reqwest = { version = "0.11.22", features = ["native-tls-vendored"] }
semver = "1.0.20"
serde.workspace = true
serde_json.workspace = true
shellwords = "1.1.0"
tokio = { version = "1.35.1", features = ["full"] }
walkdir.workspace = true
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4"] }

internal-baml-codegen.workspace = true
internal-baml-core.workspace = true

[dev-dependencies]
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
