[package]
edition = "2021"
name = "baml-fmt"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
colored = "2"
baml-lib = { path = "../baml-lib/baml" }
serde_json.workspace = true
serde.workspace = true
indoc.workspace = true
lsp-types = "0.91.1"
log = "0.4.14"
enumflags2 = "0.7"



[dev-dependencies]
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
once_cell = "1.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"

[features]
# sigh please don't ask :(
vendored-openssl = []
use-pyo3 = ["baml-lib/use-pyo3"]
