[package]
name = "baml_pyo3"
edition = "2021"
version = "0.1.0"
authors.workspace = true
description.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.21.1", features = [
  "extension-module",
  "abi3-py38",
  "generate-import-lib",
  "serde",
] }
internal-baml-jinja = { path = "../baml-lib/jinja" }
serde_json.workspace = true
serde.workspace = true
pythonize = "0.21.1"
