[package]
edition = "2021"
name = "baml-runtime"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = { version = "4.4.6", features = ["cargo", "derive"] }
colored = "2.1.0"
dashmap.workspace = true
dunce = "1.0.4"
either.workspace = true
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
json_comments = "0.2.2"
jsonish = { path = "../baml-lib/jsonish" }
instant.workspace = true
internal-baml-codegen.workspace = true
baml-types = { path = "../baml-lib/baml-types" }
internal-baml-core = { path = "../baml-lib/baml-core" }
internal-baml-jinja = { path = "../baml-lib/jinja" }
# internal-baml-client-llm = { path = "../baml-lib/client-llm" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim = "0.11.1"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
web-time = "1.1.0"
serde-wasm-bindgen = "0.6.5"
static_assertions.workspace = true
mime_guess = "2.0.4"
mime = "0.3.17"

# For tracing
envy = "0.4.2"
chrono = "0.4.38"
reqwest-eventsource = "0.6.0"
eventsource-stream = "0.2.3"
stream-cancel = "0.8.2"
async-std = "1.12.0"
fastrand = "2.1.0"
test-log = "0.2.16"
pin-project-lite = "0.2.14"

[dependencies.hostname]
version = "0.3.1"
optional = true

[dependencies.reqwest]
version = "0.11"
features = ["json", "native-tls-vendored"]
optional = true

[dependencies.walkdir]
version = "2.5.0"
optional = true

[dependencies.wasm-bindgen]
version = "^0.2.74"
optional = true
features = ["serde-serialize"]

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.js-sys]
version = "0.3.69"
optional = true

[dependencies.web-sys]
version = "0.3.69"
optional = true
features = [
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "RequestMode",
  "Window",
]

[features]
defaults = []
wasm = [
  "colored/no-color",
  "dep:js-sys",
  "uuid/js",
  "dep:reqwest",
  "reqwest/stream",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:wasm-bindgen-futures",
] # Enable this feature for WASM build
no_wasm = [
  "tokio/full",
  "dep:reqwest",
  "reqwest/native-tls-vendored",
  "reqwest/stream",
  "walkdir",
  "hostname",
]
internal = []

[dev-dependencies]
console_log = { version = "1" }
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
wasm-bindgen-test = "0.3.42"
walkdir = "2.5.0"
wasm-logger = "0.2.0"
