[package]
edition = "2021"
name = "baml-runtime"
version.workspace = true
authors.workspace = true
description.workspace = true

license-file.workspace = true

[build-dependencies]
anyhow.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
cfg-if.workspace = true
clap = { version = "4.4.6", features = ["cargo", "derive"] }
colored = "2.1.0"
dashmap.workspace = true
dunce = "1.0.4"
either.workspace = true
env_logger.workspace = true
eventsource-stream = "0.2.3"
futures.workspace = true
http-body.workspace = true
indexmap.workspace = true
# instant = "0.1"  # do not use this or wasm-timer - use web-time instead
json_comments = "0.2.2"
jsonish = { path = "../baml-lib/jsonish" }
internal-baml-codegen.workspace = true
baml-types = { path = "../baml-lib/baml-types" }
internal-baml-core = { path = "../baml-lib/baml-core" }
internal-baml-jinja = { path = "../baml-lib/jinja" }
# internal-baml-client-llm = { path = "../baml-lib/client-llm" }
log.workspace = true
pin-project-lite.workspace = true
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json.workspace = true
strsim = "0.11.1"
strum.workspace = true
strum_macros.workspace = true
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
web-time.workspace = true
static_assertions.workspace = true
mime_guess = "2.0.4"
mime = "0.3.17"

# For tracing
envy = "0.4.2"
chrono = "0.4.38"
stream-cancel = "0.8.2"
async-std = "1.12.0"
fastrand = "2.1.0"
test-log = "0.2.16"
include_dir = "0.7.3"
infer = "0.16.0"
url = "2.5.2"
shell-escape = "0.1.5"
aws-sigv4 = "1.2.2"
aws-credential-types = "1.2.0"
aws-smithy-async = "1.2.1"
aws-smithy-runtime-api = "1.7.0"
aws-smithy-types = "1.2.0"
aws-smithy-runtime = "1.6.0"
enum_dispatch = "0.3.13"
ambassador = "0.4.0"
aws-smithy-json = "0.60.7"
wasm-bindgen = "^0.2.74"
js-sys = "0.3.69"
jsonwebtoken = "9.3.0"
pretty_assertions = "1.4.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
aws-config = { version = "1.5.3", default-features = false, features = [] }
aws-sdk-bedrockruntime = { version = "1.37.0", default-features = false, features = [
] }
colored = { version = "2.1.0", default-features = false, features = [
  "no-color",
] }
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
js-sys = "0.3.69"
reqwest = { version = "0.12.5", features = ["stream", "json"] }
# 
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }
wasm-bindgen = { version = "^0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = [
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "RequestMode",
  "Window",
] }
ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aws-config = "1.5.3"
aws-sdk-bedrockruntime = "1.37.0"
hostname = "0.3.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = [
  "json",
  "native-tls-vendored",
  "stream",
] }
walkdir = "2.5.0"

[features]
defaults = []
internal = []

[dev-dependencies]
console_log = { version = "1" }
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
wasm-bindgen-test = "0.3.42"
walkdir = "2.5.0"
wasm-logger = "0.2.0"
