[package]
edition = "2021"
name = "baml-schema-build"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
baml-fmt = { path = "../baml-fmt" }
baml-runtime = { path = "../baml-runtime", features = [
  "wasm",
  "internal",
], default-features = false }
console_log = { version = "1", features = ["color"] }
js-sys = "=0.3.69"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.4"
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = { version = "0.2.0" }
indexmap.workspace = true
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
wasm-bindgen-test = "0.3.42"
walkdir = "2.5.0"
wasm-logger = "0.2.0"

# [profile.release]
# debug = true
