[package]
edition = "2021"
name = "baml-schema-wasm"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
baml-runtime = { path = "../baml-runtime", features = [
  "internal",
], default-features = false }
baml-types = { path = "../baml-lib/baml-types" }
cfg-if.workspace = true
console_error_panic_hook = "0.1.7"
console_log = { version = "1", features = ["color"] }
getrandom = { version = "0.2.15", features = ["js"] }
indexmap.workspace = true
internal-baml-codegen.workspace = true
internal-baml-core.workspace = true
js-sys = "=0.3.69"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.4"
time.workspace = true
url.workspace = true
uuid = { version = "1.8", features = ["v4", "js"] }
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = { version = "0.2.0" }
web-time.workspace = true
either = "1.8.1"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
wasm-bindgen-test = "0.3.42"
walkdir = "2.5.0"
wasm-logger = "0.2.0"

# [profile.release]
# debug = true
