[package]
edition = "2021"
name = "internal-baml-client-llm"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = "0.20.0"
clust = "0.8.0"
env_logger.workspace = true
log.workspace = true
serde.workspace = true
