[package]
edition = "2021"
name = "internal-baml-codegen"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
base64.workspace = true
indexmap.workspace = true
internal-baml-core.workspace = true
either.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
