[package]
edition = "2021"
name = "internal-baml-codegen"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
base64.workspace = true
baml-types.workspace = true
cfg-if.workspace = true
indexmap.workspace = true
internal-baml-core.workspace = true
either.workspace = true
env_logger.workspace = true
log.workspace = true
pathdiff = "0.1.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sugar_path = "1.2.0"
walkdir.workspace = true
semver = "1.0.23"
colored = "2.1.0"
itertools = "0.13.0"
