[package]
name = "baml-python-ffi"
edition = "2021"
version = "0.1.0"
authors.workspace = true
description = "BAML python bindings (Cargo.toml)"
license-file.workspace = true

[lib]
name = "baml_py"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
baml-runtime = { path = "../baml-runtime", features = [
  "network",
  "disk",
  "internal",
] }
internal-baml-jinja = { path = "../baml-lib/jinja" }
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
# pyo3 0.21 introduces the Bound<> API, which is a massive breaking change
# 0.21 is currently out, but pyo3-asyncio is stuck on the pre-Bound API, so we're also stuck on the pre-Bound API
pyo3 = { version = "0.20.3", features = [
  "abi3-py38",
  "extension-module",
  "generate-import-lib",
  "serde",
] }
#pyo3-asyncio = { git = "https://github.com/jopemachine/pyo3-asyncio.git", branch = "migration-pyo3-0.21", features = [
#  "tokio-runtime",
#] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
pythonize = "0.20.0"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[build-dependencies]
pyo3-build-config = "0.20.3"
