[package]
name = "baml-python-ffi"
edition = "2021"
version = "0.1.0"
authors.workspace = true
description = "BAML python bindings (Cargo.toml)"
license = "Apache-2.0"

[lib]
name = "baml_py"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
baml-cli.workspace = true
baml-types.workspace = true
baml-runtime = { path = "../baml-runtime", default-features = false, features = [
  "internal",
] }
internal-baml-codegen.workspace = true
internal-baml-jinja = { path = "../baml-lib/jinja" }
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
pyo3 = { version = "0.21.2", default-features = false, features = [
  "abi3-py38",
  "extension-module",
  "generate-import-lib",
  "serde",
] }
# pyo3-asyncio head is still on 0.20.0; someone's done the work of updating it to 0.21 and Bound<>,
# but that work hasn't been merged yet. it builds though, and looks good to me!
# https://github.com/awestlake87/pyo3-asyncio/pull/121
pyo3-asyncio = { git = "https://github.com/BoundaryML/pyo3-asyncio.git", branch = "migration-pyo3-0.21", features = [
  "tokio-runtime",
] }
#pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
pythonize = "0.21.1"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[build-dependencies]
pyo3-build-config = "0.21.2"
