[project]
name = "baml-py"
version = "0.1.7"
description = "BAML python bindings (pyproject.toml)"
readme = "README.md"
authors = [["Boundary", "contact@boundaryml.com"]]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
