[project]
name = "baml-py"
version = "0.55.2"
description = "BAML python bindings (pyproject.toml)"
readme = "README.md"
authors = [["Boundary", "contact@boundaryml.com"]]
license = "LICENSE"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python_src"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so).
features = ["pyo3/extension-module"]

[project.scripts]
baml-cli = "baml_py:invoke_runtime_cli"
