[project]
name = "baml-py"
version = "0.63.0"
description = "BAML python bindings (pyproject.toml)"
readme = "README.md"
authors = [["Boundary", "contact@boundaryml.com"]]
license = "LICENSE"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python_src"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so).
features = ["pyo3/extension-module"]

[project.scripts]
baml-cli = "baml_py:invoke_runtime_cli"

# NOTE: dependencies is _deliberately_ empty so that different flavors of BAML
# don't have to share dependencies, e.g. we currently generate python/pydantic
# but if we generate python/vanilla in the future, we don't want to mess
# with that.
